force-app/main/default/objects/Practica_en_Empresa__c/Practica_en_Empresa__c.object-meta.xml
<CustomObject>
    <label>Practica en Empresa</label>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Practica en Empresa Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Practica en Empresas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>