force-app/main/default/objects/Practica_en_Empresa__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Practica en Empresas</relationshipLabel>
    <relationshipName>Practica_en_Empresas</relationshipName>
    <type>Lookup</type>
</CustomField>