force-app/main/default/objects/Practica_en_Empresa__c/fields/Fecha_Final__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Final__c</fullName>
    <label>Fecha Final</label>
    <type>Date</type>
</CustomField>